# duckdb-pyo3-example

./: .dockerignore  Cargo.toml  README.md  Run.ps1  container.linux.Dockerfile  container.win.Dockerfile  pyproject.toml  run.sh  test.py
benchmark/server/: Cargo.toml  readme.md
benchmark/server/python/: client-json.py  perftest.py  plot-results.py  plot.py  readme.md  requirements.txt  server-flight.py  server-json.py
benchmark/server/src/: lib.rs
benchmark/server/stats/: python_json_vs_flight_comparison_l.csv  python_json_vs_flight_comparison_m.csv  python_json_vs_flight_comparison_s.csv  python_json_vs_flight_comparison_xl.csv  python_json_vs_flight_comparison_xs.csv  python_json_vs_flight_comparison_xxl.csv  python_json_vs_flight_comparison_xxs.csv  python_json_vs_flight_mean_comparison.csv  rust_json_vs_flight_comparison_l.csv  rust_json_vs_flight_comparison_m.csv  rust_json_vs_flight_comparison_s.csv  rust_json_vs_flight_comparison_xl.csv  rust_json_vs_flight_comparison_xs.csv  rust_json_vs_flight_comparison_xxl.csv  rust_json_vs_flight_comparison_xxs.csv  rust_json_vs_flight_mean_comparison.csv
src/: lib.rs
