[package]
name = "duckdb_pyo3_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "duckdb_pyo3_example"
crate-type = ["cdylib"]

[dependencies]
r2d2 = "0.8.10"
duckdb = { version = "1.1.1", features = ["bundled", "r2d2", "appender-arrow"] }

arrow-schema = "53.1.0"
arrow-array = "53.1.0"

polars = "0.43.1"
polars-core = { version = "0.43.1", features = ["arrow_rs"] }
polars-arrow = { version = "0.43.1", features = ["arrow_rs"] }

pyo3 = { version = "0.22.5", features = ["abi3-py39"] }
# Currently the fix of issue https://github.com/pola-rs/pyo3-polars/issues/101 && https://github.com/pola-rs/pyo3-polars/pull/103 for pyo3-polars crate is not published on crates.io.
# Direct dependency is used to get the fix for Windows.
#pyo3-polars = "0.17.0"
pyo3-polars = { git = "https://github.com/pola-rs/pyo3-polars.git", rev = "632776a" }

