[package]
name = "duckdb_pyo3_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "duckdb_pyo3_example"
crate-type = ["cdylib"]

[dependencies]
r2d2 = "0.8.10"
duckdb = { version = "1.1.1", features = ["bundled", "r2d2", "appender-arrow"] }

arrow-schema = "53.3.0"
arrow-array = "53.3.0"
arrow-ipc = "53.3.0"

polars = { version = "0.45.1", features = ["ipc"] }
polars-core = { version = "0.45.1" }
polars-arrow = { version = "0.45.1" }

pyo3 = { version = "0.22.5", features = ["abi3-py39"] }
pyo3-polars = "0.19.0"

anyhow = "1.0.94"