[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "duckdb_pyo3_example"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

dependencies = [
    "polars=1.9.0",
]

[tool.poetry]
name = "duckdb_pyo3_example"
version = "0.0.1"
authors = ["mracsko"]
description = ""

[tool.poetry.dependencies]
python = "^3.9"
maturin = "1.7.4"
polars = "1.9.0"
pyarrow = "17.0.0"