[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
num2words = "1.2.0"
chrono = "0.4.39"

polars = { version = "0.45.1", features = ["ipc", "dtype-datetime", "serde"] }
polars-arrow = { version = "0.45.1" }
polars-core = { version = "0.45.1" }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12",features = ["blocking"] }
arrow = { version = "53.3.0",features = ["ipc"] }
arrow-schema = "53.3.0"
arrow-array = "53.3.0"

tonic = "0.12.3"
arrow-flight = "53.3.0"
futures = "0.3.31"
anyhow = "1.0.95"
csv = "1.3.1"
